Add Timer Button But Ui is Incomplete

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --timer-background-color: #ffffff;
+  --timer-border: 1px solid #000000;
+  --timer-height: 70%;
+  --timer-width: 70%;
+  --button-border: 3px solid #000000;
+  --button-text-size: 2em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+div,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --timer-height: 100%;
+    --timer-width: 100%;
+    --button-text-size: 4em;
+  }
 }
