--- a/src/component/App/App.css
+++ b/src/component/App/App.css
@@ -4,4 +4,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  background-color: #d3cadb;
+
+  /* background-image: url(../1.svg); */
 }
